<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    tool:showIn="navigation_view">

    <item
        android:id="@+id/nav_Home"
        android:checkable="true"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_Home" />

    <group
        android:id="@+id/group_userOptions"
        android:checkableBehavior="single"
        android:visible="false">

        <item
            android:id="@+id/nav_MyFilms"
            android:checkable="true"
            android:icon="@drawable/ic_myfilms"
            android:title="@string/nav_MyFilms" />

        <item
            android:id="@+id/nav_Profile"
            android:checkable="true"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_Profile" />

        <item
            android:id="@+id/nav_SignOut"
            android:icon="@drawable/ic_signout"
            android:title="@string/nav_SignOut" />

    </group>

    <group
        android:id="@+id/group_moreOptions"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_Settings"
            android:checkable="true"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_Settings"
            android:visible="true" />

        <item
            android:id="@+id/nav_About"
            android:checkable="true"
            android:icon="@drawable/ic_about"
            android:title="@string/nav_About" />

    </group>

</menu>