<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc_start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">

        <ProgressBar
            android:id="@+id/progressBar_MovieDetails"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="100dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:indeterminateTintMode="src_atop" />

        <ImageView
            android:id="@+id/imageView_Poster"
            android:layout_width="180dp"
            android:layout_height="300dp"
            android:layout_marginRight="30dp"
            android:maxWidth="5dp"
            android:maxHeight="245dp"
            android:scaleType="fitXY"
            android:src="@color/cyan" />

        <TextView
            android:id="@+id/textView_Runtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/imageView_Poster"
            android:text="@string/textView_Runtime"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/textView_ReleaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_Runtime"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/imageView_Poster"
            android:text="@string/textView_ReleaseDate"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/textView_Categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_ReleaseDate"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/imageView_Poster"
            android:text="@string/textView_Categories"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <Button
            android:id="@+id/button_Actors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_Categories"
            android:layout_gravity="center"
            android:layout_toRightOf="@id/imageView_Poster"
            android:text="@string/button_Actors" />

        <Button
            android:id="@+id/button_Director"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_Actors"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/imageView_Poster"
            android:text="@string/button_Director" />

        <TextView
            android:id="@+id/textView_tSynopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView_Poster"
            android:layout_marginTop="30dp"
            android:text="@string/textView_tSynopsis"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_Synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_tSynopsis"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/textView_Synopsis"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <Button
            android:id="@+id/button_WatchTrailer"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_Synopsis"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/button_WatchTrailer" />

        <Button
            android:id="@+id/button_WatchMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_WatchTrailer"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/button_WatchMovie" />

    </RelativeLayout>

</ScrollView>