<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc_start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bc_start">

        <TextView
            android:id="@+id/textView_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:fontFamily="@font/carter_one"
            android:text="@string/textView_signUp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="50dp" />

        <EditText
            android:id="@+id/editText_SU_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_signUp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/cyan"
            android:ems="20"
            android:hint="@string/hintName"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editText_SU_LastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_SU_Name"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/cyan"
            android:ems="20"
            android:hint="@string/hintLastName"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editText_SU_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_SU_LastName"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/cyan"
            android:ems="20"
            android:hint="@string/hintEmail"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editText_SU_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_SU_Email"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/cyan"
            android:ems="20"
            android:hint="@string/hintPassword"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editText_SU_ConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_SU_Password"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="55dp"
            android:backgroundTint="@color/cyan"
            android:ems="20"
            android:hint="@string/hintConfirmPassword"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/button_SU_SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_SU_ConfirmPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/button_SU_SignUp"
            android:textSize="20dp" />

        <ProgressBar
            android:id="@+id/progressBar_SignUp"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTint="@color/cyan"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>
